--- a/mods/ts/rules/civilian-infantry.yaml
+++ b/mods/ts/rules/civilian-infantry.yaml
@@ -38,7 +38,7 @@ UMAGON:
 		BuildPaletteOrder: 0
 		Prerequisites: ~none
 	Valued:
-		Cost: 600
+		Cost: 700
 	Tooltip:
 		Name: Umagon
 	Voiced:
@@ -48,8 +48,13 @@ UMAGON:
 	Health:
 		HP: 15000
 	Passenger:
-	RevealsShroud:
+	GrantConditionOnMovement@sniperSightDisable:
+		Condition: moving.sniper
+	RevealsShroud@sniper:
 		Range: 9c512
+		RequiresCondition: moving.sniper
+	RevealsShroud:
+		Range: 7c0
 	Armament:
 		LocalOffset: 126,0,438
 		Weapon: SilencerSniper
@@ -108,7 +113,7 @@ MUTANT:
 	Buildable:
 		Queue: Infantry
 		BuildPaletteOrder: 0
-		Prerequisites: ~none
+		Prerequisites: ~civilian.armory
 	Valued:
 		Cost: 100
 	Tooltip:
@@ -119,8 +124,6 @@ MUTANT:
 		HP: 8500
 	Mobile:
 		Speed: 71
-	RevealsShroud:
-		Range: 6c0
 	Armament:
 		LocalOffset: 311,83,490, 311,-83,490
 		BurstPerFireCount: 2
@@ -144,7 +147,7 @@ MWMN:
 	Buildable:
 		Queue: Infantry
 		BuildPaletteOrder: 0
-		Prerequisites: ~none
+		Prerequisites: ~civilian.armory
 	Valued:
 		Cost: 125
 	Tooltip:
@@ -155,8 +158,6 @@ MWMN:
 		HP: 8500
 	Mobile:
 		Speed: 77
-	RevealsShroud:
-		Range: 6c0
 	Armament:
 		LocalOffset: 276,0,470
 		Weapon: ShardShotGun
@@ -179,7 +180,7 @@ MUTANT3:
 	Buildable:
 		Queue: Infantry
 		BuildPaletteOrder: 0
-		Prerequisites: ~none
+		Prerequisites: ~civilian.armory
 	Valued:
 		Cost: 400
 	Tooltip:
@@ -191,7 +192,7 @@ MUTANT3:
 	Mobile:
 		Speed: 71
 	RevealsShroud:
-		Range: 7c256
+		Range: 7c0
 	Armament:
 		LocalOffset: 311,83,490, 311,-83,490
 		BurstPerFireCount: 2
@@ -213,7 +214,7 @@ TRATOS:
 	Inherits@2: ^HealsOnTiberium
 	Inherits@LeaveTib: ^LeaveTiberiumWhenDeath
 	Valued:
-		Cost: 100
+		Cost: 500
 	Tooltip:
 		Name: Tratos
 	Voiced:
@@ -222,30 +223,45 @@ TRATOS:
 		HP: 20000
 	Mobile:
 		Speed: 71
-	RevealsShroud:
-		Range: 5c0
 
 OXANNA:
 	Inherits: ^Soldier
+	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
+	Buildable:
+		Queue: Infantry
+		BuildPaletteOrder: 0
+		Prerequisites: ~none
 	Valued:
-		Cost: 100
+		Cost: 700
 	Tooltip:
 		Name: Oxanna
 	Voiced:
 		VoiceSet: Oxanna
 	Health:
-		HP: 5000
+		HP: 15000
 	Mobile:
 		Speed: 56
 	RevealsShroud:
-		Range: 6c0
+		Range: 7c0
 	WithSplitAttackPaletteInfantryBody:
 		DefaultAttackSequence: attack
+	AttackFrontal:
+		Voice: Attack
+		FacingTolerance: 0
+	Armament:
+		LocalOffset: 312,0,502
+		Weapon: OxannaGun
+		UseBlindage: true
 
 SLAV:
 	Inherits: ^Soldier
+	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
+	Buildable:
+		Queue: Infantry
+		BuildPaletteOrder: 0
+		Prerequisites: ~none
 	Valued:
-		Cost: 100
+		Cost: 700
 	Tooltip:
 		Name: Slavick
 	Voiced:
@@ -255,9 +271,16 @@ SLAV:
 	Mobile:
 		Speed: 56
 	RevealsShroud:
-		Range: 6c0
+		Range: 7c0
 	WithSplitAttackPaletteInfantryBody:
 		DefaultAttackSequence: attack
+	AttackFrontal:
+		Voice: Attack
+		FacingTolerance: 0
+	Armament:
+		LocalOffset: 320,0,422
+		Weapon: SlavickGun
+		UseBlindage: true
 
 CIV1:
 	Inherits: ^CivilianInfantry
