--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -497,7 +497,7 @@
 		Type: Wood
 	RevealsShroud:
 		Range: 4c0
-		MaxHeightDelta: 3
+		MaxHeightDelta: 1260
 	RenderSprites:
 		Palette: terraindecoration
 	MapEditorData:
@@ -663,8 +663,8 @@
 		Cost: 10
 	RevealsShroud:
 		RequiresCondition: !inside-tunnel
-		Range: 2c0
-		MaxHeightDelta: 3
+		Range: 5c512
+		MaxHeightDelta: 1260
 	Mobile:
 		Voice: Move
 		TurnSpeed: 150
@@ -891,8 +891,6 @@
 	Tooltip:
 		Name: Civilian
 	ScaredyCat:
-	RevealsShroud:
-		Range: 6c0
 	Wanders:
 		MinMoveDelay: 150
 		MaxMoveDelay: 750
@@ -1007,7 +1005,10 @@
 	Inherits: ^Vehicle
 	Mobile:
 		Locomotor: tracked
-
+	RevealsShroud:
+		RequiresCondition: !inside-tunnel
+		Range: 6c512
+		MaxHeightDelta: 1260
 
 ^RenderVoxel:
 	RenderModels:
@@ -1040,6 +1041,12 @@
 	Inherits: ^Vehicle
 	Inherits: ^VoxelActor
 	-MustBeDestroyed:
+	RevealsShroud:
+		RequiresCondition: !inside-tunnel
+		Range: 6c0
+		MaxHeightDelta: 1260
+	Armor:
+		Type: Light
 
 ^CivilianVoxelCrusher:
 	Inherits: ^CivilianVoxelVehicle
@@ -1400,7 +1407,7 @@
 		Type: Light
 	RevealsShroud:
 		Range: 5c0
-		MaxHeightDelta: 3
+		MaxHeightDelta: 1260
 		RequiresCondition: !inside-tunnel
 	Selectable:
 		Bounds: 1206, 1448
