--- a/mods/ts/rules/gdi-support.yaml
+++ b/mods/ts/rules/gdi-support.yaml
@@ -95,16 +95,10 @@ GACTWR:
 		Sequence: turret-sam
 	Armament@VULCPRIMARY:
 		RequiresCondition: tower.vulcan
-		Weapon: VulcanMG #VulcanTower
+		Weapon: TurretVulcan #VulcanTower
 		BurstPerFireCount: 2
 		LocalOffset: 588,120,784, 588,-120,784
 		MuzzleSequence: muzzle
-	# Armament@VULCSECONDARY:
-	# 	RequiresCondition: tower.vulcan
-	# 	Name: secondary
-	# 	Weapon: VulcanMG #VulcanTower
-	# 	LocalOffset: 588,-120,784
-	# 	MuzzleSequence: muzzle
 	Armament@ROCKET:
 		RequiresCondition: tower.rocket
 		Weapon: RPGTower
