通过分离和修改修正步兵开火动画的枪口火焰的播放速度，修正步兵开火时看起来没有muzzle的bug。 顺带修正一些其他bug

--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -760,6 +760,11 @@
 		Sequence: infantry
 		Palette: player
 		IsPlayerPalette: true
+	BodyOrientation:
+		UseClassicPerspectiveFudge: False
+		CameraPitch: 85
+		QuantizedFacings: 8
+
 
 ^RegularInfantryDeath:
 	WithDeathAnimation@normal:
