--- a/mods/ts/rules/nod-infantry.yaml
+++ b/mods/ts/rules/nod-infantry.yaml
@@ -68,7 +68,7 @@ CYBORG:
 		Range: 6c512
 	Armament:
 		Weapon: CyborgMG #Vulcan3
-		LocalOffset: 240,120,589
+		LocalOffset: 290,120, 610
 		UseBlindage: true
 	AttackFrontal:
 		Voice: Attack
