--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -1223,6 +1223,10 @@
 		Categories: Critter
 	GrantConditionOnTunnelLayer:
 		Condition: inside-tunnel
+	Explodes:
+		Weapon: VisceroidExplode
+		EmptyWeapon: VisceroidExplode
+		RequiresCondition: !traped
 
 ^BlossomTree:
 	Inherits@1: ^SpriteActor
