--- a/mods/ts/chrome.yaml
+++ b/mods/ts/chrome.yaml
@@ -714,6 +714,9 @@ scrollitem:
 scrollitem-hover:
 	Inherits: button
 
+scrollitem-pressed:
+	Inherits: button
+
 scrollitem-highlighted:
 	Inherits: button-pressed
 
