--- a/mods/ts/3dtest/weapons.yaml
+++ b/mods/ts/3dtest/weapons.yaml
@@ -9,6 +9,7 @@
 	Projectile: Bullet
 		DetectTargetFromLength: 0.7
 		DetectTargetBeforeDist: 2c0
+		ContrailZOffset: 22
 		ContrailLength: 3
 		ContrailWidth: 50
 		ContrailUseInnerOuterColor: true
