--- a/mods/ts/rules/palettes.yaml
+++ b/mods/ts/rules/palettes.yaml
@@ -199,3 +199,100 @@
 		Alpha: 0.55
 	MenuPaletteEffect:
 		FadeLength: 20
+
+
+	PaletteFromFile@Gray:
+		Name: gray
+		Filename: gray.pal
+		AllowModifiers: false
+	PaletteFromPaletteWithAlpha@GrayAlpha:
+		Name: gray_alpha
+		Alpha: 0.3
+		BasePalette: gray
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@GrayAlpha40:
+		Name: gray_alpha40
+		Alpha: 0.4
+		BasePalette: gray
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@GrayAlpha50:
+		Name: gray_alpha50
+		Alpha: 0.5
+		BasePalette: gray
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@GrayAlpha60:
+		Name: gray_alpha60
+		Alpha: 0.6
+		BasePalette: gray
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@GrayAlpha70:
+		Name: gray_alpha70
+		Alpha: 0.7
+		BasePalette: gray
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@GrayAlpha80:
+		Name: gray_alpha80
+		Alpha: 0.8
+		BasePalette: gray
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@GrayAlpha90:
+		Name: gray_alpha90
+		Alpha: 0.9
+		BasePalette: gray
+		AllowModifiers: false
+		# Premultiply: true
+
+
+	PaletteFromFile@Red:
+		Name: red
+		Filename: red.pal
+		AllowModifiers: false
+	PaletteFromPaletteWithAlpha@RedAlpha:
+		Name: red_alpha
+		Alpha: 0.3
+		BasePalette: red
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@RedAlpha40:
+		Name: red_alpha40
+		Alpha: 0.4
+		BasePalette: red
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@RedAlpha50:
+		Name: red_alpha50
+		Alpha: 0.5
+		BasePalette: red
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@RedAlpha60:
+		Name: red_alpha60
+		Alpha: 0.6
+		BasePalette: red
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@RedAlpha70:
+		Name: red_alpha70
+		Alpha: 0.7
+		BasePalette: red
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@RedAlpha80:
+		Name: red_alpha80
+		Alpha: 0.8
+		BasePalette: red
+		AllowModifiers: false
+		# Premultiply: true
+	PaletteFromPaletteWithAlpha@RedAlpha90:
+		Name: red_alpha90
+		Alpha: 0.9
+		BasePalette: red
+		AllowModifiers: false
+		# Premultiply: true
+
